test/e2e/testdata/gateway-with-envoyproxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-envoyproxy
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: custom-routing-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-with-envoyproxy
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: infra-backend-v1
          port: 8080
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: upstream-host
                value: '%UPSTREAM_HOST%'
